fix an overflow issues with ship sheets

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -1877,6 +1877,8 @@ span.total-output {
     "ship-image ship-requirements"
     "ship-deck .";
   /* position: fixed; */
+  min-height: 305px;
+  max-height: 305px;
 }
 
 img.ship-mask-bg {
